--- a/cases/resturant/index.html
+++ b/cases/resturant/index.html
@@ -500,7 +500,7 @@
                         <div class="CaseHerostyle__ImageContainer-sc-1828vw4-1 kEDQMq"><img src="/Images/meal.jpg" alt="" class="CaseHerostyle__InnerImage-sc-1828vw4-2 hGMYBv"/></div>
                         
                         <div class="CaseHerostyle__Content-sc-1828vw4-8 eiRjlN">
-                           <h1 class="CaseHerostyle__MainHeader-sc-1828vw4-9 bBxrBI">En Helhetslösning för en Modern Restaurang.</h1>
+                           <h1 class="CaseHerostyle__MainHeader-sc-1828vw4-9 bBxrBI">En Helhetslösning för en Modern Restaurang</h1>
                            <p class="text__paragraph-sc-1xracbr-7 CaseHerostyle__Paragraph-sc-1828vw4-10 kITvjv kbAXrW">Förbättra restaurangens effektivitet med smidig datahantering, engagerande UX/UI-design, apputveckling för minnesvärda besök och avancerad systemutveckling. Vår webbplats agerar som en central punkt för information, menyval och cateringalternativ. Integration av olika system skapar en enhetlig drift. En holistisk strategi ger en sammanhängande digital närvaro, för att förhöja restaurangupplevelsen och cateringmöjligheterna.</p>
                         </div>
                      </div>
