--- a/cases/movie-explore/index.html
+++ b/cases/movie-explore/index.html
@@ -539,7 +539,7 @@
                         <h2 class="text__heading_xl-sc-1xracbr-2 CaseThreestyle__Header-sc-a06umc-2 dDQFpA iCGwRM">Nyfiken på att se vårt arbete i andra spännande projekt?</h2>
                         <p class="text__paragraph-sc-1xracbr-7 CaseThreestyle__Paragraph-sc-a06umc-4 kITvjv hvPxKv">Vi har levererat framstående resultat inom diverse branscher. Utforska våra projekt inom olika områden för att få en djupare inblick i vårt mångsidiga arbete. Kontakta oss för att inleda en dialog om hur vi kan anpassa vår expertis för att möta dina specifika behov och skapa något enastående tillsammans!</p>
                         <div class="CaseThreestyle__Cases-sc-a06umc-5 nGoEB">
-                           <a href="../alexander-white/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
+                           <a href="../Kaféet/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
                               <img src="/Images/cofee.jpeg" alt="Alexander White" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
