--- a/hallbarhet/index.html
+++ b/hallbarhet/index.html
@@ -637,7 +637,7 @@
                               </a>
                            </div>
                            <div class="CaseGridstyle__TwoCasesRight-sc-l5243z-8 icTjmo">
-                              <a href="alexander-white/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
+                              <a href="Kaféet/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
                                  <img src="/Images/tech-breakfast.jpg" alt="Alexander White" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -665,7 +665,7 @@
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ"></div>
                                  </div>
                               </a>
-                              <a href="ida-warg-beauty/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
+                              <a href="mäklarfirma/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
                                  <img src="/Images/web-one.jpg" alt="" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
