--- a/vara-tjanster/webbutveckling/index.html
+++ b/vara-tjanster/webbutveckling/index.html
@@ -647,7 +647,7 @@
                         <h2 class="text__heading_xl-sc-1xracbr-2 CaseThreestyle__Header-sc-a06umc-2 labbSw iCGwRM">Vad ska webbplatsen göra för dig?</h2>
                         <p class="text__paragraph-sc-1xracbr-7 CaseThreestyle__Paragraph-sc-a06umc-4 gnqhWj hvPxKv">Från kreativa kampanjsidor till avancerade e-handelsplattformar – vi är redo för det mesta när det kommer till webbutveckling. Vi tar oss an både små och stora projekt och som techbyrå kan vi också lösa det mer tekniskt utmanande. Vi hjälper dig koppla ihop system med varandra och få dem att interagera med hemsidan automatiskt. Allt för att underlätta din vardag! Här kan du ta en titt på några olika typer av webbprojekt vi gjort:</p>
                         <div class="CaseThreestyle__Cases-sc-a06umc-5 nGoEB">
-                           <a href="../../cases/alexander-white/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
+                           <a href="../../cases/Kaféet/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
                               <img src="/Images/cofee.jpeg" alt="Alexander White" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
