--- a/cases/index.html
+++ b/cases/index.html
@@ -704,7 +704,7 @@
                               </a>
                            </div>
                            <div class="CaseGridstyle__ThreeCases-sc-l5243z-7 eMNpTp">
-                              <a href="denona/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
+                              <a href="../cases/gssningsspel/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
                                  <img src="/Images/hero-small.jpg" alt="" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
