--- a/cases/Kaféet/index.html
+++ b/cases/Kaféet/index.html
@@ -617,7 +617,7 @@
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk"></div>
                               </div>
                            </a>
-                           <a href="../the-good-talents/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
+                           <a href="../mobilförsäljning/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
                               <img src="/Images/phone.jpg" alt="The Good Talents" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
