--- a/cases/index.html
+++ b/cases/index.html
@@ -788,7 +788,7 @@
                               </a>
                            </div>
                            <div class="CaseGridstyle__TwoCasesLeft-sc-l5243z-6 kfYzHx">
-                              <a href="the-good-talents/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
+                              <a href="mobilförsäljning/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
                                  <img src="/Images/phone.jpg" alt="The Good Talents" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
