--- a/vara-tjanster/cyber-security/index.html
+++ b/vara-tjanster/cyber-security/index.html
@@ -661,7 +661,7 @@
                         <h2 class="text__heading_xl-sc-1xracbr-2 CaseThreestyle__Header-sc-a06umc-2 labbSw iCGwRM">Design för digitala plattformar</h2>
                         <p class="text__paragraph-sc-1xracbr-7 CaseThreestyle__Paragraph-sc-a06umc-4 gnqhWj hvPxKv">Som digitala designers skapar vi fantastiska användarupplevelser för appar, webbplatser, plattformar och system. Oavsett om du snabbt behöver en enkel kampanjsida eller ska skapa en helt ny app kommer våra designers ta dig med på resan från de första skisserna till en klickbar prototyp. Här kan du ta en titt på några av de design-case vi är extra stolta över:</p>
                         <div class="CaseThreestyle__Cases-sc-a06umc-5 nGoEB">
-                           <a href="../../cases/gissningsspel/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
+                           <a href="../../cases/Äventyrsappen/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
                               <img src="/Images/ui-design.avif" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
