--- a/cases/reseapplikation/index.html
+++ b/cases/reseapplikation/index.html
@@ -632,7 +632,7 @@
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk"></div>
                               </div>
                            </a>
-                           <a href="../gissningsspel/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
+                           <a href="../Äventyrsappen/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
                               <img src="/Images/out-one.png" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
