--- a/cases/mobilförsäljning/index.html
+++ b/cases/mobilförsäljning/index.html
@@ -579,8 +579,8 @@
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk"></div>
                               </div>
                            </a>
-                           <a href="../ysds/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
-                              <img src="/Images/game-one.jpg" alt="ysds" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
+                           <a href="../dice-roller/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
+                              <img src="/Images/game-one.jpg" alt="dice-roller" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk">
