--- a/cases/index.html
+++ b/cases/index.html
@@ -733,7 +733,7 @@
                                  </div>
                               </a>
                               <a href="dice-roller/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
-                                 <img src="/Images/game.jpg" alt="dice-roller" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
+                                 <img src="/Images/game.avif" alt="dice-roller" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ">
