--- a/cases/mobilförsäljning/index.html
+++ b/cases/mobilförsäljning/index.html
@@ -500,7 +500,7 @@
                         <div class="CaseHerostyle__ImageContainer-sc-1828vw4-1 kEDQMq"><img src="/Images/phone.avif" alt="The Good Talents" class="CaseHerostyle__InnerImage-sc-1828vw4-2 hGMYBv"/></div>
                        
                         <div class="CaseHerostyle__Content-sc-1828vw4-8 eiRjlN">
-                           <h1 class="CaseHerostyle__MainHeader-sc-1828vw4-9 bBxrBI">E-handelsapplikation</h1>
+                           <h1 class="CaseHerostyle__MainHeader-sc-1828vw4-9 bBxrBI" style="padding-right: 30px;">E-handelsapplikation</h1>
                            <p class="text__paragraph-sc-1xracbr-7 CaseHerostyle__Paragraph-sc-1828vw4-10 kITvjv kbAXrW">I nära samarbete med en framstående e-handelsplattform har vi utformat och implementerat tekniska lösningar som förhöjer kundupplevelsen online och effektiviserar mobilförsäljningen.
                            </p>
                         </div>
@@ -544,7 +544,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h3 class="text__heading_lg-sc-1xracbr-3 TextRowsstyle__SizeH3-sc-f5buiq-8 bMjjZJ fSjTvY">Utveckling</h3>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Hemsidan byggdes med WordPress som redigeringssystem där varje sektion är ett fristående block som kunden kan lägga till på de sidor de önskar. Med flexibla block kan kunden själv bygga upp sidor, lägga till eller ta bort block. Det brukar vara en uppskattad lösning som passade perfekt även för The Good Talents för att underlätta hanteringen av hemsidan.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: black;">Hemsidan byggdes med  som redigeringssystem där varje sektion är ett fristående block som kunden kan lägga till på de sidor de önskar. Med flexibla block kan kunden själv bygga upp sidor, lägga till eller ta bort block. Det brukar vara en uppskattad lösning som passade perfekt även för The Good Talents för att underlätta hanteringen av hemsidan.</p>
                            </div>
                         </div>
                      </div>
