--- a/vara-tjanster/webbutveckling/index.html
+++ b/vara-tjanster/webbutveckling/index.html
@@ -675,7 +675,7 @@
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk"></div>
                               </div>
                            </a>
-                           <a href="../../cases/vass/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
+                           <a href="../../cases/marknadsundersöknings/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
                               <img src="/Images/card.webp" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
@@ -684,7 +684,7 @@
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Design</p>
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Bildbank</p>
                                  </div>
-                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">PR-byrån fick en ny, vass design</h5>
+                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">PR-byrån fick en ny, marknadsundersöknings design</h5>
                               </div>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
