--- a/cases/mobilförsäljning/index.html
+++ b/cases/mobilförsäljning/index.html
@@ -553,8 +553,8 @@
                   
                   <section id="case-three" class="background__bg_themed-sc-as3htg-0 CaseThreestyle__Background-sc-a06umc-0 ciddPI">
                      <div class="wrapper__main_inner-sc-d7vgux-0 CaseThreestyle__MainInner-sc-a06umc-1 evhckS">
-                        <h2 class="text__heading_xl-sc-1xracbr-2 CaseThreestyle__Header-sc-a06umc-2 dDQFpA iCGwRM">Nyfiken på mer?</h2>
-                        <p class="text__paragraph-sc-1xracbr-7 CaseThreestyle__Paragraph-sc-a06umc-4 kITvjv hvPxKv">Vi har jobbat med allt från läxhjälp till sportbilar, så vi har troligtvis erfarenhet också från din bransch. Ta en titt på fler case eller hör av dig om du vill ta reda på vad vi kan åstadkomma tillsammans!</p>
+                        <h2 class="text__heading_xl-sc-1xracbr-2 CaseThreestyle__Header-sc-a06umc-2 dDQFpA iCGwRM">Nyfiken på att se vårt arbete i andra spännande projekt?</h2>
+                        <p class="text__paragraph-sc-1xracbr-7 CaseThreestyle__Paragraph-sc-a06umc-4 kITvjv hvPxKv">Vi har levererat framstående resultat inom diverse branscher. Utforska våra projekt inom olika områden för att få en djupare inblick i vårt mångsidiga arbete. Kontakta oss för att inleda en dialog om hur vi kan anpassa vår expertis för att möta dina specifika behov och skapa något enastående tillsammans!</p>
                         <div class="CaseThreestyle__Cases-sc-a06umc-5 nGoEB">
                            <a href="../phrio/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
                               <img src="/Images/study.jpg" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
