--- a/cases/Äventyrsappen/index.html
+++ b/cases/Äventyrsappen/index.html
@@ -486,7 +486,7 @@
                         <div class="CaseHerostyle__ImageContainer-sc-1828vw4-1 kEDQMq"><img src="/Images/nat-4.jpg" alt="" class="CaseHerostyle__InnerImage-sc-1828vw4-2 hGMYBv"/></div>
                        
                         <div class="CaseHerostyle__Content-sc-1828vw4-8 eiRjlN">
-                           <h1 class="CaseHerostyle__MainHeader-sc-1828vw4-9 bBxrBI"> Trygg Spännande Äventyrsappen</h1>
+                           <h1 class="CaseHerostyle__MainHeader-sc-1828vw4-9 bBxrBI">Spännande Äventyrsappen</h1>
                            <p class="text__paragraph-sc-1xracbr-7 CaseHerostyle__Paragraph-sc-1828vw4-10 kITvjv kbAXrW">Äventyrsappen prioriterar säkerheten genom avancerade säkerhetsåtgärder och kryptering för att skydda användarnas information. Dessutom hanterar och lagrar appen kundinformation på ett effektivt sätt för en smidig användarupplevelse. Appen erbjuder också spännande utflykter och turer, anpassade betalningsplaner och en engagerande UX-design. Tekniskt sett bygger appen på moderna teknologier som JavaScript, Vue.js och Node.js för en stabil och skalbar upplevelse. Målet är att inspirera människor att bli mer aktiva och skapa lycka genom minnesvärda äventyr.
 
                            </p>
