--- a/cases/index.html
+++ b/cases/index.html
@@ -737,7 +737,7 @@
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ">
-                                       <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Tech-team</p>
+                                       <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">SPEL</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">System</p>
                                     </div>
                                     <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Tärningspel
@@ -765,7 +765,7 @@
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ">
-                                       <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Webbplats</p>
+                                       <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">SPEL</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
                                     </div>
                                     <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Gissningsspel</h5>
