--- a/cases/index.html
+++ b/cases/index.html
@@ -855,8 +855,8 @@
                   <section id="work-with-us" class="contactFormContentstyle__Section-sc-1wvwxzl-0 iYyjAt">
                      <div class="wrapper__main_inner-sc-d7vgux-0 contactFormContentstyle__MainInner-sc-1wvwxzl-1 fhPlTV laXlEt">
                        <div class="contactFormContentstyle__Content-sc-1wvwxzl-2 hXqva">
-                         <h2 class="text__heading_xl-sc-1xracbr-2 contactFormContentstyle__Header-sc-1wvwxzl-3 dDQFpA GuKcz">Vill du veta mer?</h2>
-                         <p class="text__paragraph-sc-1xracbr-7 contactFormContentstyle__Paragraph-sc-1wvwxzl-4 kITvjv bBiTzt">Behöver du någon som lotsar dig igenom den digitala världen? Vi svarar gärna på dina frågor, guidar dig eller berättar mer om hur vi jobbar. Skicka ett mail så kontaktar vi dig! </p>
+                         <h2 class="text__heading_xl-sc-1xracbr-2 contactFormContentstyle__Header-sc-1wvwxzl-3 dDQFpA GuKcz">Nyfiken på att se vårt arbete i andra spännande projekt?</h2>
+                         <p class="text__paragraph-sc-1xracbr-7 contactFormContentstyle__Paragraph-sc-1wvwxzl-4 kITvjv bBiTzt">Vi har levererat framstående resultat inom diverse branscher. Utforska våra projekt inom olika områden för att få en djupare inblick i vårt mångsidiga arbete. Kontakta oss för att inleda en dialog om hur vi kan anpassa vår expertis för att möta dina specifika behov och skapa något enastående tillsammans!</p>
                          <h5 class="text__heading_sm-sc-1xracbr-5 contactFormContentstyle__SubHeader-sc-1wvwxzl-5 iehGeS ijChgB">Send an Email</h5>
                          <form id="yourForm" class="contactFormContentstyle__FormWrapper-sc-1wvwxzl-12 iiTQIG">
                            <div class="contactFormContentstyle__FormColumn-sc-1wvwxzl-13 eqgEDi">
