--- a/cases/index.html
+++ b/cases/index.html
@@ -827,7 +827,7 @@
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ">
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Webbplats</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
-                                       <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Bildbank</p>
+                                       <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Dataanalys</p>
                                     </div>
                                     <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Marknadsundersöknings plattform</h5>
                                  </div>
@@ -884,7 +884,7 @@
                          <div class="contactFormContentstyle__TextContainer-sc-1wvwxzl-8 dYcXxb">
                            <h5 class="text__heading_sm-sc-1xracbr-5 contactFormContentstyle__ContactHeader-sc-1wvwxzl-9 iehGeS jTYwcm">Du kan kontakta vår VD & IT-SPECIALIST Mattheos Tasios direkt här:</h5>
                            <a href="mailto:mattheos.tasios@pasver.se" class="contactFormContentstyle__ContactEmail-sc-1wvwxzl-10 hOFlsN">mattheos.tasios@pasver.se</a>
-                           <a href="tel:0733220455" class="contactFormContentstyle__ContactPhone-sc-1wvwxzl-11 kwJqqX">073-322 04 55</a>
+                           <a href="tel:0733220455" class="contactFormContentstyle__ContactPhone-sc-1wvwxzl-11 kwJqqX"> 076-611 11 18</a>
                          </div>
                        </div>
                      </div>
