--- a/index.html
+++ b/index.html
@@ -542,12 +542,12 @@
                            <div aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear;object-fit:contain"></div>
                            <picture>
                               <source type="image/webp" srcSet="/static/96e8f50d8f8bcbd6557b1ee283cae303/15b88/Qte_logo-original_white.webp 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/2aabd/Qte_logo-original_white.webp 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/b3e61/Qte_logo-original_white.webp 1108w" sizes="100vw"/>
-                              <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity:0" sizes="100vw" decoding="async" loading="eager" src="/Images/logo.png" srcSet="/Images/logo.png 1108w" alt="qte logo"/>
+                              <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity:0" sizes="100vw" decoding="async" loading="eager" src="/Images/logo.png" srcSet="/Images/logo.png 1108w" alt="logo"/>
                            </picture>
                            <noscript>
                               <picture>
                                  <source type="image/webp" srcSet="/static/96e8f50d8f8bcbd6557b1ee283cae303/15b88/Qte_logo-original_white.webp 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/2aabd/Qte_logo-original_white.webp 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/b3e61/Qte_logo-original_white.webp 1108w" sizes="100vw"/>
-                                 <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity:0" sizes="100vw" decoding="async" loading="eager" src="/Images/logo.png" srcSet="/Images/logo.png 1108w" alt="qte logo"/>
+                                 <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity:0" sizes="100vw" decoding="async" loading="eager" src="/Images/logo.png" srcSet="/Images/logo.png 1108w" alt="logo"/>
                               </picture>
                            </noscript>
                            <script type="module">const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}</script>
@@ -645,7 +645,7 @@
                   <section id="services">
                      <div class="wrapper__main_inner-sc-d7vgux-0 Servicesstyle__MainInner-sc-jlqcj3-0 fhPlTV">
                         <div class="Servicesstyle__HeaderBlock-sc-jlqcj3-2 ZZgwK">
-                           <h2 color="#0C3A53;" class="Servicesstyle__Header-sc-jlqcj3-3 cTPMtp">Vi är din professionella partner inom teknik, specialiserade på att, realisera och säkra. 
+                           <h2 color="#0C3A53;" class="Servicesstyle__Header-sc-jlqcj3-3 cTPMtp">Vi är din professionella partner inom teknik specialiserade på att realisera och säkra. 
                            </h2>
                           
                         </div>
@@ -1054,12 +1054,12 @@
                                  <div aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear"></div>
                                  <picture>
                                     <source type="image/webp" data-srcset="/static/96e8f50d8f8bcbd6557b1ee283cae303/c8a45/Qte_logo-original_white.webp 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/6c34b/Qte_logo-original_white.webp 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/f7c88/Qte_logo-original_white.webp 1108w" sizes="100vw"/>
-                                    <img data-gatsby-image-ssr="" data-main-image="" style="opacity:0" sizes="100vw" decoding="async" loading="lazy" data-src="/static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Qte_logo-original_white.png" data-srcset="/static/96e8f50d8f8bcbd6557b1ee283cae303/f1e7c/Qte_logo-original_white.png 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/b3f4e/Qte_logo-original_white.png 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Qte_logo-original_white.png 1108w" alt="qte logo"/>
+                                    <img data-gatsby-image-ssr="" data-main-image="" style="opacity:0" sizes="100vw" decoding="async" loading="lazy" data-src="/static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Qte_logo-original_white.png" data-srcset="/static/96e8f50d8f8bcbd6557b1ee283cae303/f1e7c/Qte_logo-original_white.png 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/b3f4e/Qte_logo-original_white.png 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Qte_logo-original_white.png 1108w" alt="logo"/>
                                  </picture>
                                  <noscript>
                                     <picture>
                                        <source type="image/webp" srcSet="/static/96e8f50d8f8bcbd6557b1ee283cae303/c8a45/Qte_logo-original_white.webp 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/6c34b/Qte_logo-original_white.webp 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/f7c88/Qte_logo-original_white.webp 1108w" sizes="100vw"/>
-                                       <img data-gatsby-image-ssr="" data-main-image="" style="opacity:0" sizes="100vw" decoding="async" loading="lazy" src="static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Qte_logo-original_white.png" srcSet="static/96e8f50d8f8bcbd6557b1ee283cae303/f1e7c/Qte_logo-original_white.png 750w,static/96e8f50d8f8bcbd6557b1ee283cae303/b3f4e/Qte_logo-original_white.png 1080w,static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Qte_logo-original_white.png 1108w" alt="qte logo"/>
+                                       <img data-gatsby-image-ssr="" data-main-image="" style="opacity:0" sizes="100vw" decoding="async" loading="lazy" src="static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Qte_logo-original_white.png" srcSet="static/96e8f50d8f8bcbd6557b1ee283cae303/f1e7c/Qte_logo-original_white.png 750w,static/96e8f50d8f8bcbd6557b1ee283cae303/b3f4e/Qte_logo-original_white.png 1080w,static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Qte_logo-original_white.png 1108w" alt="logo"/>
                                     </picture>
                                  </noscript>
                                  <script type="module">const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}</script>
