--- a/cases/dice-roller/index.html
+++ b/cases/dice-roller/index.html
@@ -596,7 +596,7 @@
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk"></div>
                               </div>
                            </a>
-                           <a href="../24-duty/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
+                           <a href="../flower-shop/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
                               <img src="/Images/flowe.jpg" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
