--- a/cases/gissningsspel/index.html
+++ b/cases/gissningsspel/index.html
@@ -376,7 +376,7 @@
          h1::selection,h2::selection,h3::selection,h4::selection,h5::selection,h6::selection,p::selection,li::selection,a::selection{background:#FEF683;}/*!sc*/
          data-styled.g735[id="sc-global-kzfIrN1"]{content:"sc-global-kzfIrN1,"}/*!sc*/
       </style>
-      <title data-react-helmet="true">Bonanza Location — Ett kundcase från qte development</title>
+      <title data-react-helmet="true">Gissningsspe</title>
       <link rel="icon" href="../../favicon-32x32.png@v=e607ec5d29294ef9194c47d59c130c16" type="image/png"/>
       <link rel="manifest" href="../../manifest.webmanifest" crossorigin="anonymous"/>
       <link rel="apple-touch-icon" sizes="48x48" href="../../icons/icon-48x48.png@v=e607ec5d29294ef9194c47d59c130c16"/>
