--- a/cases/reseplanerare/index.html
+++ b/cases/reseplanerare/index.html
@@ -630,15 +630,15 @@
 
                         </p>
                         <div class="CaseThreestyle__Cases-sc-a06umc-5 nGoEB">
-                           <a href="../24-duty/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
-                              <img src="/Images/flowe.jpg" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
+                           <a href="../flower-shop/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
+                              <img src="/Images/ecomerece.jpg" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk">
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">App</p>
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Design</p>
                                  </div>
-                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">Snabb hjälp när du behöver den som mest</h5>
+                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">E-Commerce plattform</h5>
                               </div>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
