--- a/vara-tjanster/apputveckling/index.html
+++ b/vara-tjanster/apputveckling/index.html
@@ -628,7 +628,7 @@
                            <div class="IconHerostyle__ImageWrapper-sc-t3oyw9-13 hxkAiQ">
                               <div class="IconHerostyle__ImageColumn-sc-t3oyw9-14 kKvUdN">
                                  <div class="IconHerostyle__ImageContainer-sc-t3oyw9-15 fVjzsq"><img src="/Images/application-one.jpg" alt="" class="IconHerostyle__Image-sc-t3oyw9-16 dXGPnB"/></div>
-                                 <div class="IconHerostyle__ImageContainer-sc-t3oyw9-15 fVjzsq"><img src="/Images/application-two.jpg" alt="Phrio" class="IconHerostyle__Image-sc-t3oyw9-16 dXGPnB"/></div>
+                                 <div class="IconHerostyle__ImageContainer-sc-t3oyw9-15 fVjzsq"><img src="/Images/application-two.jpg" alt="studie" class="IconHerostyle__Image-sc-t3oyw9-16 dXGPnB"/></div>
                               </div>
                               <div class="IconHerostyle__ImageColumn-sc-t3oyw9-14 kKvUdN">
                                  <div class="IconHerostyle__ImageContainer-sc-t3oyw9-15 fVjzsq"><img src="/Images/application-three.jpg" alt="" class="IconHerostyle__Image-sc-t3oyw9-16 dXGPnB"/></div>
